[gd_scene load_steps=5 format=2]

[ext_resource path="res://Army/Army.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Army/circlegreen.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Army" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="army_sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, 2.86102e-06 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="range_sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.109804 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="destination" type="Sprite" parent="."]
self_modulate = Color( 0.231373, 0.811765, 0.337255, 0.309804 )
position = Vector2( 0, 100 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="status_label" type="Label" parent="."]
margin_top = -20.0
margin_right = 38.0
margin_bottom = -6.0
text = "active"

[connection signal="area_entered" from="." to="." method="_on_Army_area_entered"]
